# mmcot-fusion

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: REPRODUCING.md
results/: README.md
results/checkpoint_eval/stage1_rationale/: predictions_ans_test.json  run_config.json
results/checkpoint_eval/stage2_answer/: predictions_ans_test.json  run_config.json
results/m3cot_finetune/sigmoid_1h/stage1/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_finetune/sigmoid_1h/stage2/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_finetune/sigmoid_mh/stage1/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_finetune/sigmoid_mh/stage2/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_finetune/tanh_mh/stage1/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_finetune/tanh_mh/stage2/: predictions_ans_test.json  run_config.json  train_log.json
results/m3cot_zeroshot/baseline_sigmoid_1h/stage1/: predictions_ans_test.json  run_config.json
results/scienceqa/image_blind/stage1/: run_config.json  (+1 more)
scripts/: aggregate_results.py  e0_eval_official_ckpt.sh  e1_train_baseline.sh  e2_train_tanh_mh.sh  e4_train_sigmoid_mh.sh  make_loss_figure.py  map_share4o_rationales.py  prepare_m3cot.py  template_stats.py
scripts/hpc/: job_m3cot.sh  job_run.sh  job_smoke.sh  smoke_gpu.py
src/mmcot_fusion/: __init__.py  cli.py
src/mmcot_fusion/evaluation/: metrics.py
src/mmcot_fusion/training/: run.py
tests/: test_fusion.py  test_model.py  test_prompts.py
(+41 files in other folders)
