[project]
name = "mmcot-fusion"
version = "0.1.0"
description = "Reimplementation of Multimodal Chain-of-Thought (MM-CoT) with pluggable Flamingo-style gated multi-head cross-attention fusion"
readme = "README.md"
authors = [
    { name = "Kaede Mori", email = "fmap1e0206@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["multimodal", "chain-of-thought", "ScienceQA", "cross-modal-alignment", "T5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers==4.30.0",
    "numpy<2",
    "pandas>=1.4",
    "nltk>=3.6",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "sentencepiece>=0.1.99",
    "huggingface-hub>=0.16",
    "scipy>=1.10",
    "accelerate>=0.20,<0.21",
    "protobuf<4",
]

[project.optional-dependencies]
similarity = ["sentence-transformers>=2.2"]

[project.urls]
Repository = "https://github.com/kaede-mori/mmcot-fusion"

[project.scripts]
mmcot-fusion = "mmcot_fusion.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]
experiments = [
    "datasets>=2.14",
    "timm>=0.9",
    "pillow>=10.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
